--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1> hello world</h1> 
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <title>Home</title>
+  </head>
+  <body>
+        <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/mypage.html" role="button">mypage.html</a>
+        <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/mypage_bootstrap.html" role="button">mypage_bootstrap.html</a>
+        <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/form.html" role="button">Form.html</a>
+  </body>
