--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/form.html" role="button">Form.html</a>
         <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/hw2/question1/login.html" role="button">HW2, Login.html</a>
         <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/hw2/question2/Theory/coding.html" role="button">HW2, coding.html</a>
-        <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/hw2/question3/tic-tac-toe/tic-tac-toe.html" role="button">HW2, coding.html</a>
+        <a class="btn btn-primary" href="https://slundell123.github.io/SDHomework1/hw2/question3/tic-tac-toe/tic-tac-toe.html" role="button">HW2, tic-tac-toe.html</a>
 
 
   </body>
